# firewatch

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  client.py  debug.txt  debug_full.txt  inference.py  models.py  openenv.yaml  pyproject.toml
firewatch/: __init__.py  graders.py  reward.py  simulation.py  tasks.py
server/: __init__.py  app.py  firewatch_environment.py
